--- a/public/index.html
+++ b/public/index.html
@@ -42,6 +42,8 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <script src="https://kit.fontawesome.com/4f746bebe5.js" crossorigin="anonymous"></script>
+
     <script type="text/javascript" src="https://cdn.omise.co/omise.js"></script>
   </body>
 </html>
